// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownButton renders correctly 1`] = `
.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c4:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  line-height: 0;
  padding: 12px;
}

.c7:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c0 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  font-family: CircularStd,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c5:disabled {
  cursor: not-allowed;
}

.c5 {
  color: white;
}

.c5:hover:enabled,
.c5:focus:enabled,
.c5:active:enabled {
  box-shadow: none;
  background: hsl(196.29999999999995,100%,37.5%);
  border-color: hsl(196.29999999999995,100%,37.5%);
  color: white;
  opacity: undefined;
}

.c5:hover:enabled svg,
.c5:focus:enabled svg,
.c5:active:enabled svg {
  color: white !important;
}

.c2 {
  box-sizing: border-box;
}

.c8 {
  min-width: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-left: 0;
  margin: 0;
  vertical-align: top;
  padding: 0 16px;
  width: 44px;
}

.c6 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
  margin: 0;
  width: calc(100% - 44px);
}

.c3 {
  display: inline-block;
  border-radius: 3px;
  vertical-align: top;
  position: relative;
}

.c3 svg {
  width: 12px;
  height: translateY(1px);
}

.c1 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
}

.c1 h1,
.c1 h2,
.c1 h3,
.c1 h4,
.c1 h5,
.c1 h6,
.c1 button {
  font-family: CircularStd,Arial,sans-serif;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 "
  >
    <span>
      <button
        className="c4 c5 c6"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div>
          DropDown
        </div>
      </button>
      <button
        className="c7 c5 c8"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-down fa-w-14 "
          color="#444444"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`Opened DropDownButton renders correctly 1`] = `
.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c4:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  line-height: 0;
  padding: 12px;
}

.c7:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c0 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  font-family: CircularStd,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c5:disabled {
  cursor: not-allowed;
}

.c5 {
  color: white;
}

.c5:hover:enabled,
.c5:focus:enabled,
.c5:active:enabled {
  box-shadow: none;
  background: hsl(196.29999999999995,100%,37.5%);
  border-color: hsl(196.29999999999995,100%,37.5%);
  color: white;
  opacity: undefined;
}

.c5:hover:enabled svg,
.c5:focus:enabled svg,
.c5:active:enabled svg {
  color: white !important;
}

.c2 {
  box-sizing: border-box;
}

.c9 {
  position: fixed;
  top: auto;
  right: auto;
  bottom: auto;
  left: auto;
  z-index: 0;
  background: none;
}

.c8 {
  min-width: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-left: 0;
  margin: 0;
  vertical-align: top;
  padding: 0 16px;
  width: 44px;
}

.c6 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
  margin: 0;
  width: calc(100% - 44px);
}

.c10 {
  background: white;
  position: absolute;
  min-width: 0px;
  box-shadow: 1px 1px 5px#f4f4f4;
  border-radius: 3px;
  border: 1px solid #c6c8c9;
  z-index: 1;
  margin-top: 2px;
  left: 0;
  right: auto;
  white-space: nowrap;
  max-height: auto;
  overflow-y: auto;
}

.c3 {
  display: inline-block;
  border-radius: 3px;
  vertical-align: top;
  position: relative;
}

.c3 svg {
  width: 12px;
  height: translateY(1px);
}

.c11 {
  padding: 4px 16px;
  border-top: 0;
  border-radius: 3px;
}

.c11:hover:enabled {
  background: #f4f4f4;
}

.c1 {
  font-family: 'Nunito',Arial,sans-serif;
  font-size: 14px;
}

.c1 h1,
.c1 h2,
.c1 h3,
.c1 h4,
.c1 h5,
.c1 h6,
.c1 button {
  font-family: CircularStd,Arial,sans-serif;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 "
  >
    <span>
      <button
        className="c4 c5 c6"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div>
          DropDown
        </div>
      </button>
      <button
        className="c7 c5 c8"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-up fa-w-14 "
          color="#444444"
          data-icon="chevron-up"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </span>
    <div
      className="c9 "
      onClick={[Function]}
    />
    <div
      className="c10"
      onClick={[Function]}
    >
      <div
        className="c11"
      >
        <div>
          Item
        </div>
      </div>
      <div
        className="c11"
      >
        <div>
          Item
        </div>
      </div>
      <div
        className="c11"
      >
        <div>
          Item
        </div>
      </div>
      <div
        className="c11"
      >
        <div>
          Item
        </div>
      </div>
    </div>
  </div>
</div>
`;
